--- a/kv/LoginScreen.kv
+++ b/kv/LoginScreen.kv
@@ -35,7 +35,7 @@
         MDTextFieldRound:
             id: email_field
             name: email_field
-            hint_text: 'Email/No.HP'
+            hint_text: 'Email'
             size_hint: 0.8, 0.07
             pos_hint: {'center_x': .5, 'center_y': .55}
             icon_left: 'account'
