--- a/main.kv
+++ b/main.kv
@@ -2,6 +2,7 @@
 #: include kv/RegisterScreen.kv
 #: include kv/MainMenuScreen.kv
 #: include kv/InputScreen.kv
+#: include kv/EditScreen.kv
 
 ScreenManager:
     id: screen_manager
@@ -13,3 +14,5 @@ ScreenManager:
         id: registerscreen
     InputScreen:
         id: inputscreen
+    EditScreen:
+        id: editscreen
