--- a/kv/MainMenuScreen.kv
+++ b/kv/MainMenuScreen.kv
@@ -70,7 +70,7 @@
     MDList:
         Screen:
             MDRectangleFlatButton:
-                text: 'Logout'
+                text: 'Keluar'
                 pos_hint:{'center_x': 0.5}
                 on_release: app.keluar()
 
